# SchemaValidator

./: CMakeLists.txt
doc/: schema.json
include/: filereader.h  jsonvalidator.h  message.h
src/: filereader.cpp  jsonvalidator.cpp  main.cpp  message.cpp
